Modificando el titulo

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Pandita</title>
 </head>
 <body>
-    <h1>hola xd</h1>
+    <h1>Hello Word</h1>
     <p>algo largo</p>
     <a href="https://github.com/Jhazmin01">link de github</a>
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fes%2Fimages%2Fnature%2Flandscape&psig=AOvVaw3AY5jWLBTUwBxNbdYe-7Ei&ust=1704325316759000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCNizqd3wv4MDFQAAAAAdAAAAABAE"/>
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdepositphotos.com%2Fes%2Fphotos%2Fmariposas-fondo-blanco.html&psig=AOvVaw1dY5zI2VSg-Sdfz2Net8mw&ust=1704325456944000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJi28Z_xv4MDFQAAAAAdAAAAABAE"/>
 </body>
 <footer>
-    
+
 </footer>
 </html>
