--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Pandita</title>
 </head>
+
 <body>
     <h1>Hello Word</h1>
     <p>algo largo</p>
     <a href="https://github.com/Jhazmin01">link de github</a>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fes%2Fimages%2Fnature%2Flandscape&psig=AOvVaw3AY5jWLBTUwBxNbdYe-7Ei&ust=1704325316759000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCNizqd3wv4MDFQAAAAAdAAAAABAE"/>
+    <img src="Pinterest.jpg"/>
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdepositphotos.com%2Fes%2Fphotos%2Fmariposas-fondo-blanco.html&psig=AOvVaw1dY5zI2VSg-Sdfz2Net8mw&ust=1704325456944000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJi28Z_xv4MDFQAAAAAdAAAAABAE"/>
+    <ul>
+        <li>mat</li>
+        <li>fis</li>
+    </ul>
+    <ol>
+        <li>papa</li>
+        <li>cebolla</li>
+        <li>pollo</li>
+    </ol>
+    <form action="">
+        <label for="text" class="etiqueta">Nombre: </label>
+        <input type="text" name="text" class="name">
+        <div>
+        <label for="text" class="etiqueta">Apellido: </label> 
+        <input type="text" name="text" id="name">
+        </div>
+        <div>
+        <input type="Submit" value="Enviar">
+    </div>
+    </form>
+    <h1>Hola soy otro titulo</h1>
+    <p>Este es un parrafo largo</p>
 </body>
 <footer>
 
