--- a/practica.html
+++ b/practica.html
@@ -7,90 +7,178 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        :root{
-            --white: #FFFFFF;
-            --black: #000000;
-            --gray: #2B2E34;
-            --yellow: #D1AE31;
-            --gray-blue: #0D1423;
-            --clear_gray: #afc0f2;
-        }
-        body {
-            font-family: 'Nunito';
-            margin: 0;
-        }
-        .main {
-            width: 100%;
-            height: 100vh;
-            display: grid;
-            place-items: center;
-            background-color: var(--black);
-        }
-        .company{
-            display: grid;
-            grid-template-rows: auto 1fr auto;
-            width: 100%;
-            justify-items: center;
-            background-color: var(--black);
-        }
-        .more-info {
-            display: grid;
-            background-color: var(--black);
-            width: 100%;
-        }
+:root {
+    --white: #fff;
+    --black: #000;
+    --gray: #2B2E34;
+    --gray-blue: #0D1423;
+    --yellow: #D1AE31;
+    --clear-gray: #AFC0E2;
+    --sm: 16px;
+    --md: 20px;
+    --lg: 60px;
+}
 
-        .title {
-            color: var(--white);
-            text-align: center;
-            font-size: var(--lg);
-        }
+body {
+    background-color: var(--gray);
+    font-family: 'Nunito';
+    margin: 0;
+}
 
-        .subtitle {
-            color: var(--white);
-            text-align: center;
-            font-size: var(--md);
-            margin: 5px 0 5px 0;
-        }
+.main-container {
+    background-color: var(--gray);
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    align-items: end;
+    height: 100vh;
+    width: 100%;
+}
+
+.title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.title {
+    font-size: var(--lg);
+    color: var(--white);
+}
+
+.sub-title {
+    color: var(--clear-gray);
+    font-size: var(--md);
+    padding: 0;
+}
+
+.cards-container {
+    display: flex;
+
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 10% 0 10%;
+
+}
+
+.card {
+    background-color: var(--gray-blue);
+
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    height: 60%;
+    width: 20%;
+    padding: 10px;
+    border-radius: 8px;
+
+}
+
+.card img {
+    width: 55px;
+    height: 44px;
+    margin-top: -20px;
+}
+
+.card p {
+    font-size: var(--md);
+    text-align: center;
+    color: var(--clear-gray);
+}
+
+.image-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 0;
+
+
+}
+
+.image-container .image-robot {
+    position: absolute;
+}
+
+.image-container .image-floor {
+    margin-bottom: 0;
+    width: 100%;
+
+}
+
+@media(max-width: 768px) {
+
+
+    .cards-container {
+        flex-direction: column;
+    }
+
+    .card {
+        margin-bottom: 20px;
+        width: 80%;
+    }
+
+    .card>p {
+        font-size: 1rem;
+    }
+
+    .image-container .image-robot {
+        width: 50%;
+    }
+
+    .title-container {
+        margin: 0 10% 0 10%;
+    }
+
+    .title-container>.title {
+        font-size: 2rem;
+    }
+
+    .title-container>.sub-title {
+        text-align: center;
+    }
+
+    .card img {
+        width: 44px;
+        height: 32px;
+        margin-top: -18px;
+    }
+
+}
     </style>
 </head>
 <body>
-    <div class="main">
-        <div class="company">
-            <h1 class="title">Scaffolding a New Company</h1>
-            <p class="subtitle">Join us with the lastest blockchain innovations</p>
+    <div class="main-container">
+        <div class="title-container">
+            <h1 class="title">
+                Scaffolding a New Company
+            </h1>
+            <p class="sub-title">
+                Join us with the lastest blockchain innovations
+            </p>
         </div>
-    </div>
-    <div class="more-info">
-        <section class="icons container">
-            <div class="card-icon">
-                <figure>
-                    <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="" class="logo">
-                </figure>
+        <div class="cards-container">
+            <div class="card">
+                <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="">
+                <p>Join us with the lastest blockchain innovations</p>
             </div>
-
-            <div class="icon-text">
-                <h2 class="icon-title">Join us with the lastest blockchain innovations</h2>
+            <div class="card">
+                <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="">
+                <p>Join us with the lastest blockchain innovations</p>
             </div>
-            <div class="card-icon">
-                <figure>
-                    <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="" class="logo">
-                </figure>
-            </div>
-
-            <div class="icon-text">
-                <h2 class="icon-title">Join us with the lastest blockchain innovations</h2>
-            </div>
-            <div class="card-icon">
-                <figure>
-                    <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="" class="logo">
-                </figure>
-            </div>
-
-            <div class="icon-text">
-                <h2 class="icon-title">Join us with the lastest blockchain innovations</h2>
+            <div class="card">
+                <img src="imagenes figma/fa-solid_money-check-alt.svg" alt="">
+                <p>Join us with the lastest blockchain innovations</p>
             </div>
         </div>
-        </section>
+        <div class="image-container">
+            <img class="image-robot" src="imagenes figma/robot.svg" alt="robot">
+            <img class="image-floor" src="logos/floor.svg" alt="robot">
+        </div>
     </div>
+
 </body>
+
 </html>
